Fix clipping issue (temporarily)

--- a/frontend/src/app/(app)/upload/page.module.css
+++ b/frontend/src/app/(app)/upload/page.module.css
@@ -31,5 +31,5 @@
     flex: 1;
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: 96%;
 }
